--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -36,11 +36,31 @@
     top: 0;
 }
 #navbarButtons {
-    display: flex;
-    align-items: center;
     justify-content: right;
     gap: 10px;
+    margin-top:5px;
     margin-right: 10px;
+    color: #005a00;
+}
+#gemsDisplay {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin-right: 10px;
+    box-sizing: border-box;
+    font-weight: bold;
+    color: #005a00;
+    background-color: #f8f9fa;
+}
+.user-profile-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
 }
 .navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
     color: #005a00;            /* Dark green for brand name & nav links for visibility */
