--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,9 +38,11 @@ body {
 }
 #footerLoggedInDiv {
     width: 90%;
-    max-width: 600px;
+    height: 4vh;
+    max-height: 100px;
     justify-content: center;
-    gap: 13vw; 
+    gap: 8vw; 
 }
+
     
     
